<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
    android:persistent="false">
    <EditTextPreference
        android:key="backup_app"
        android:title="@string/backup_app"
        app:commitOnEnter="true"
        android:singleLine="false" />

    <!--
    <MultiSelectListPreference
        android:key="backup_include"
        android:title="@string/backup_include"
        android:entryValues="@array/backup_include_values"
        android:entries="@array/backup_include_labels"
        android:persistent="false" />
    -->

    <Preference
        android:key="backup_location"
        android:title="@string/backup_location" />

    <PreferenceCategory
        android:key="backup_include"
        android:title="@string/backup_include">
        <!-- Placeholder -->
    </PreferenceCategory>
</PreferenceScreen>